Inject resource allocation info in agent for received tasks.

Per MESOS-7077, the agent needs to inject allocation info into
tasks and executors coming from an old master to maintain the
invariant that all tasks and executors on the agent have an
allocation info.

Review: https://reviews.apache.org/r/56422